Launching modules with system out redirected