@@ -1,10 +1,17 @@
 package edu.mines.acmX.exhibit.module_management.module_executors;
 
+import java.io.BufferedReader;
+import java.io.BufferedWriter;
 import java.io.File;
 import java.io.IOException;
+import java.io.InputStreamReader;
+import java.io.OutputStreamWriter;
+import java.io.PrintWriter;
+import java.io.Writer;
 import java.net.URL;
 import java.net.URLClassLoader;
 import java.util.ArrayList;
+import java.util.Scanner;
 
 import org.apache.logging.log4j.LogManager;
 import org.apache.logging.log4j.Logger;
@@ -26,8 +33,35 @@ public class ModuleProcessExecutor extends ModuleExecutor {
 	@Override
 	public void run() throws ModuleRuntimeException {
 		try {
-			Process p = Runtime.getRuntime().exec(getProcessArguments());
+			// TODO break this into a separate method/class/file..
+			ProcessBuilder build = new ProcessBuilder(getProcessArguments());
+			build.redirectErrorStream(true);
+			Process p = build.start();
+			final BufferedReader reader = new BufferedReader(
+					new InputStreamReader(p.getInputStream()));
+			BufferedWriter writer = new BufferedWriter(new OutputStreamWriter(
+					p.getOutputStream()));
+
+			Writer commandReader = new PrintWriter(System.out);
+			new Thread() {
+				public void run() {
+					String line;
+					try {
+						line = reader.readLine();
+
+						while (line != null && !line.trim().equals("--EOF--")) {
+							System.out.println("Stdout: " + line);
+							line = reader.readLine();
+						}
+					} catch (IOException e) {
+						logger.error("IO exception when processing input from separate process module is executing in");
+					}
+				}
+			}.start();
+
 			p.waitFor();
+			commandReader.close();
+
 		} catch (IOException e) {
 			logger.error(e.getMessage());
 			throw new ModuleRuntimeException();
